--- a/src/components/app/index.marko
+++ b/src/components/app/index.marko
@@ -1,203 +1,13 @@
-<div>
-    <app-sections>
-        <@section title="Buttons">
-            <table>
-                <tr>
-                    <td><b>Primary: </b></td>
-                    <td>
-                        <app-button label="small" size="small" variant="primary"/>
-                        <app-button label="normal" size="normal" variant="primary"/>
-                        <app-button label="large" size="large" variant="primary"/>
-                    </td>
-                </tr>
-                <tr>
-                    <td><b>Secondary:&nbsp;</b></td>
-                    <td>
-                        <app-button label="small" size="small" variant="secondary"/>
-                        <app-button label="normal" size="normal" variant="secondary"/>
-                        <app-button label="large" size="large" variant="secondary"/>
-                    </td>
-                </tr>
-            </table>
-
-            <div>
-                <app-button label="Change Button Size - ${state.buttonSize}"
-                    size=state.buttonSize
-                    variant="primary"
-                    onClick("handleChangeButtonSizeClick")/>
-                <app-button label="Change Button Variant - ${state.buttonVariant}"
-                    variant=state.buttonVariant
-                    onClick("handleChangeButtonVariantClick")/>
-            </div>
-        </@section>
-
-
-        <@section title="Checkboxes">
-            <p>
-                <app-checkbox
-                    label="Foo"
-                    data={name: 'foo'}
-                    checked=state.checked.foo
-                    onToggle("handleCheckboxToggle")/>
-                <app-checkbox
-                    label="Bar" data={name: 'bar'}
-                    checked=state.checked.bar
-                    onToggle("handleCheckboxToggle")/>
-                <app-checkbox
-                    label="Baz"
-                    data={name: 'baz'}
-                    checked=state.checked.baz
-                    onToggle("handleCheckboxToggle")/>
-            </p>
-            <p>
-                <app-checkbox
-                    label="Bar" data={name: 'bar'}
-                    checked=state.checked.bar
-                    onToggle("handleCheckboxToggle")/>
-            </p>
-            <p>
-                <b>Checked</b>:
-                <ul>
-                    <for(key,value in state.checked)>
-                        <li if(value)>
-                            ${key}
-                        </li>
-                    </for>
-                </ul>
-            </p>
-            <p>
-                <app-checkbox label="Foo" checked data={name: 'foo'} ref="toggleCheckbox"/>
-
-                <app-button label="Toggle Checkbox" size="small" variant="primary"
-                    onClick("handleToggleCheckboxButtonClick")/>
-            </p>
-        </@section>
-
-        <@section title="Overlays">
-            <app-button label="Show Overlay"
-                variant="primary"
-                onClick("handleShowOverlayButtonClick")/>
-
-            <app-button label="Show Notification"
-                variant="primary"
-                onClick("handleShowNotificationButtonClick")/>
-
-            <app-notifications ref="notifications" no-update/>
-
-            <app-overlay
-                onOk("handleOverlayOk")
-                onCancel("handleOverlayCancel")
-                onHide("handleOverlayHide")
-                onShow("handleOverlayShow")
-                ref="overlay"
-                visible=state.overlayVisible>
-                <h2>Overlay Demo</h2>
-                This is an overlay!
-            </app-overlay>
-        </@section>
-
-        <@section title="Tabs">
-
-            <h3>Static tabs</h3>
-
-            <app-tabs>
-                <@tab label="Home">
-                    Content for Home
-                </@tab>
-                <@tab label="Profile">
-                    Content for Profile
-                </@tab>
-                <@tab label="Messages">
-                    Content for Messages
-                </@tab>
-            </app-tabs>
-
-            <h3>Dynamic tabs</h3>
-
-            <app-tabs>
-                <for(tabIndex,tab in state.dynamicTabs)>
-                    <@tab label=('Tab ' + tabIndex)>
-                        Content for tab ${tabIndex}: ${tab.timestamp}
-                    </@tab>
-                </for>
-            </app-tabs>
-
-            <app-button label="Add Tab" onClick("handleAddTabButtonClick")/>
-
-        </@section>
-
-        <@section title="Miscellaneous">
-            <app-progress-bar>
-                <@step name="contact-info">
-                    Contact Info
-                </@step>
-                <@step name="interests">
-                    Interests
-                </@step>
-                <@step name="family">
-                    Family
-                </@step>
-            </app-progress-bar>
-            <br/>
-            <app-number-spinner/>
-            <br/>
-            <app-state-select/>
-        </@section>
-
-        <@section title="Client-side Rendering">
-
-            <app-button label="Render a button"
-                onClick("handleRenderButtonClick")/>
-
-            <app-button label="Render a checkbox"
-                onClick("handleRenderCheckboxButtonClick")/>
-
-            <app-button label="Render a progress bar"
-                onClick("handleRenderProgressBarButtonClick")/>
-
-            <div ref="renderTarget" class="render-target" no-update-body/>
-        </@section>
-
-        <@section title="Fetch data">
-            <app-fetch-data no-update/>
-
-        </@section>
-
-        <@section title="Maps">
-
-            <app-map
-                no-update
-                width="400px"
-                height="400px"
-                lat="37.774929"
-                lng="-122.419416"/>
-        </@section>
-        <@section title="Markdown">
-            <app-markdown>
-                ---
-
-                > This section demonstrates Markdown in Marko
-
-                ## Marko Features
-
-                - High performance
-                - Small
-                - Intuitive
-
-                # H1
-                ## H2
-                ### H3
-                #### H4
-                ##### H5
-                ###### H6
-
-                [markojs.com](http://markojs.com/)
-
-                _emphasis_
-                __strong__
-
-                ---
-            </app-markdown>
-        </@section>
-    </app-sections>
-</div>
+<section>
+    <image src="${i}" for(i in [
+            'https://farm3.staticflickr.com/2871/33868366335_49419e8972_c.jpg',
+            'https://farm3.staticflickr.com/2805/33484547310_02ba26ba7a_c.jpg',
+            'https://farm3.staticflickr.com/2849/33467950470_aaf48eca38_c.jpg',
+            'https://farm4.staticflickr.com/3927/33060581733_e523d557f1_c.jpg',
+            'https://farm3.staticflickr.com/2808/33056122303_cd986f6588_c.jpg',
+            'https://farm3.staticflickr.com/2941/33056095083_e94c995377_c.jpg',
+            'https://farm4.staticflickr.com/3684/33030436354_918ccf97d6_c.jpg',
+            'https://farm4.staticflickr.com/3953/33025571234_95408e3ac8_c.jpg'
+        ])>
+    </image>
+</section>
