--- a/src/layouts/default/index.marko
+++ b/src/layouts/default/index.marko
@@ -5,6 +5,33 @@
     <title>
         <include(data.title)/>
     </title>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <meta name='description' content='An Marko progressive web app. Probably the best Marko progressive web app web app there is.'>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='canonical' href='https://lit-headland-75537.herokuapp.com/'>
+    <link rel='manifest' href='manifest.json'>
+    <meta name='mobile-web-app-capable' content='yes'>
+    <meta name='apple-mobile-web-app-capable' content='yes'>
+    <meta name='application-name' content='Marko progressive web app'>
+    <meta name='apple-mobile-web-app-status-bar-style' content='black'>
+    <meta name='apple-mobile-web-app-title' content='Marko progressive web app'>
+    <link rel='icon sizes=192x192' href='/images/w.png'>
+    <link rel='apple-touch-icon' href='/images/w.png'>
+    <meta name='msapplication-TileImage' content='/images/w.png'>
+    <meta name='msapplication-TileColor' content='#000000'>
+    <meta name='theme-color' content='#000000'>
+    <meta property='og:title' content='Marko progressive web app'>
+    <meta property='og:type' content='website'>
+    <meta property='og:image' content=''>
+    <meta property='og:url' content='https://lit-headland-75537.herokuapp.com/'>
+    <meta property='og:description' content='The best and easiest Marko progressive web app web app there is. No install just use it right away in your browser!'>
+    <meta name='twitter:card' content='summary'>
+    <meta name='twitter:url' content='https://lit-headland-75537.herokuapp.com/'>
+    <meta name='twitter:title' content='Marko progressive web app'>
+    <meta name='twitter:description' content='The best and easiest Marko progressive web app web app there is. No install just use it right away in your browser!'>
+    <meta name='twitter:image' content=''>
+    <meta name='twitter:creator' content='@nunesmauricio_'>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" media="all" rel="stylesheet" />
 
     <!--
     <link> tags to include optimized CSS URLs will be included below:
@@ -13,15 +40,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>
+        <header>
             <include(data.title)/>
-        </h1>
-
+        </header>
         <main id="main">
             <include(data.body)/>
         </main>
     </div>
-
     <!--
     <script> tags to include optimized JS URLs will be included below:
     -->
@@ -33,5 +58,17 @@
     connection to the server
     -->
     <browser-refresh enabled=true/>
+    <script>
+      if('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/service-worker.js', {scope: '/'})
+          .then(function(registration) {
+                console.log('Service Worker Registered');
+          });
+        navigator.serviceWorker.ready.then(function(registration) {
+           console.log('Service Worker Ready');
+        });
+      }
+    </script>
 </body>
 </html>
+
