--- a/src/pages/about/template.marko
+++ b/src/pages/about/template.marko
@@ -1,8 +1,8 @@
 <include("src/layouts/default")>
     <@title>
-        Welcome to Marko Progressive web app.
+        About pwa and MarkoJS
     </@title>
-        <@styles>
+    <@styles>
         <link href="/static/bundle.css" media="all" rel="stylesheet" />
     </@styles>
     <@scripts>
@@ -10,7 +10,7 @@
     </@scripts>
     <@body>
         <header>
-             <h1> <a href="/about">About.</a></h1>
+             <h1> <a href="/">Go home</a></h1>
         </header>
         <app/>
     </@body>
