just reverse Array

--- a/src/pages/home/template.marko
+++ b/src/pages/home/template.marko
@@ -12,6 +12,15 @@
         <header>
              <h1> <a href="/about">About.</a></h1>
         </header>
-        <app/>
+        <app images=[
+            'https://farm3.staticflickr.com/2871/33868366335_49419e8972_c.jpg',
+            'https://farm3.staticflickr.com/2805/33484547310_02ba26ba7a_c.jpg',
+            'https://farm3.staticflickr.com/2849/33467950470_aaf48eca38_c.jpg',
+            'https://farm4.staticflickr.com/3927/33060581733_e523d557f1_c.jpg',
+            'https://farm3.staticflickr.com/2808/33056122303_cd986f6588_c.jpg',
+            'https://farm3.staticflickr.com/2941/33056095083_e94c995377_c.jpg',
+            'https://farm4.staticflickr.com/3684/33030436354_918ccf97d6_c.jpg',
+            'https://farm4.staticflickr.com/3953/33025571234_95408e3ac8_c.jpg'
+        ]/>
     </@body>
 </include>
