--- a/src/components/app/index.marko
+++ b/src/components/app/index.marko
@@ -1,4 +1,3 @@
 <section>
-    <image src="${i}" for(i in input.images)>
-    </image>
+    <image src="${i}" for(i in input.images)></image>
 </section>
